06/16/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed bug where a processing instruction node's icon was not rendered
      correctly when being edited.

06/15/2005 Trish Hartnett <trishah136@users.sourceforge.net>
     
    * Added tooltip texts for the checkboxes/scroll panes of the Options dialog box.

05/30/2005  Ian Lewis <IanLewiS@member.fsf.org>

    * Fixed bug that caused NullPointerExceptions to be thrown when editing
      attributes of an element node.
    * Fixed a bug that caused renaming an attribute to clear the value of the
      attribute.

05/20/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Cleaned up the code a bit so I don't have duplicate classes.
    * Removed the empty check box from the edit node dialog since it didn't do
      anything anyway.

05/19/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Added support for showing choosing attribute values defined in the
      Schema/DTD in the Attributes table.

05/15/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Added support for showing ID type attributes in the tree.
    * Added a new option that allows you to show all attributes, just ID
      attributes or no attributes in the tree.

05/12/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Using messages in a few more places now.

05/09/2005  Ian Lewis <IanLewis@member.fsf.org>

    * The context menu now uses the common.add message

05/09/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed bug where the context menu wouldn't show for Processing Instruction
      and Comment Nodes outside of the root element.

05/06/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug where the tree view was catching NullPointerExceptions when
      it shouldn't have
    * The tree now shows the schema completion info.
    * Moved actions adding attributes and removing attributes into their own
      file

05/01/2005  Ian Lewis <IanLewis@member.fsf.org>

    * using the EnhancedMenu class in the tree view now.
